[metadata]
name = pyquantlib
version = 0.1.0
description = A standalone Python pricing kernel for IR swaps, FX forwards, and European FX options.
long_description = file: README.pyquantlib.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial

[options]
packages = find:
python_requires = >=3.9
install_requires =

[options.extras_require]
excel =
    xlwings>=0.30

[options.packages.find]
include =
    pyquantlib*
    pyquantlib_xlwings*
